--- a/main.css
+++ b/main.css
@@ -826,9 +826,11 @@ apple {
       margin-right: 0; }
       .items > * apple.small:only-child {
         margin: 0;
-        top: calc(50% - 15px); }
+        top: calc(50% - 15px);
+        z-index: 300; }
     .items > * apple:last-child {
-      top: calc(50% - 35px); }
+      top: calc(50% - 35px);
+      z-index: 300; }
     .items > * apple:nth-last-child(2) {
       top: -25px;
       z-index: 400; }
@@ -908,9 +910,11 @@ orange {
       margin-right: 0; }
       .items > * orange.small:only-child {
         margin: 0;
-        top: calc(50% - 15px); }
+        top: calc(50% - 15px);
+        z-index: 300; }
     .items > * orange:last-child {
-      top: calc(50% - 35px); }
+      top: calc(50% - 35px);
+      z-index: 300; }
     .items > * orange:nth-last-child(2) {
       top: -25px;
       z-index: 400; }
